Updated presentation and vacancy links Fixed reveal animation on mobile devices Updated SEO tags

--- a/src/components/shared/Card/index.module.scss
+++ b/src/components/shared/Card/index.module.scss
@@ -45,10 +45,10 @@
 }
 
 .curtain {
-    width: 120%;
-    height: 110%;
-    margin-top: -10%;
-    margin-left: -10%;
+    width: 110%;
+    height: 105%;
+    margin-top: -5%;
+    margin-left: -5%;
     background-color: $black;
 }
 
